# soil-fertility-rover

./: .dockerignore  .gitignore  LICENSE  QUICK_START.md  README.md
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yaml  ros2_sim.Dockerfile
docs/: architecture.md  experiments.md  gazebo_wsl_troubleshooting.md  gui_guide.md  hardware_setup.md  simulation_setup.md  system_architecture.md
farm_ws/.colcon/: defaults.yaml
farm_ws/src/farm_arm/: CMakeLists.txt  package.xml
farm_ws/src/farm_arm/config/: kinematics.yaml
farm_ws/src/farm_arm/launch/: moveit.launch.py
farm_ws/src/farm_arm/src/: simple_arm_controller.py
farm_ws/src/farm_base_station/: package.xml  setup.cfg  setup.py
farm_ws/src/farm_base_station/farm_base_station/backend/: data_logger.py  ros_bridge.py  server.py
farm_ws/src/farm_base_station/farm_base_station/frontend/: dashboard.py  plots.py
farm_ws/src/farm_bringup/: package.xml  setup.cfg  setup.py
farm_ws/src/farm_bringup/launch/: complete_mission.launch.py  sim.launch.py  sim_bringup.launch.py  sim_with_gui.launch.py
farm_ws/src/farm_control/: CMakeLists.txt  package.xml
farm_ws/src/farm_control/config/: all_controllers.yaml  arm_controllers.yaml  diff_drive.yaml  diff_drive_controller.yaml  ros2_control.yaml
farm_ws/src/farm_control/launch/: control.launch.py
farm_ws/src/farm_control/scripts/: param_server.py
farm_ws/src/farm_data/: .gitkeep
farm_ws/src/farm_description/: CMakeLists.txt  URDF_SOURCES.md  package.xml
farm_ws/src/farm_description/urdf/: turtlebot_arm.urdf.xacro  ugvbeast_arm.urdf
farm_ws/src/farm_description/urdf/turtlebot3_om/: turtlebot3_waffle_for_open_manipulator.urdf
farm_ws/src/farm_gazebo/: CMakeLists.txt  package.xml
farm_ws/src/farm_gazebo/launch/: farm_sim.launch.py  farm_world.launch.py  farm_world_interactive.launch.py  gz_bridge.launch.py  spawn_robot.launch.py
farm_ws/src/farm_gazebo/worlds/: farm_world.world
farm_ws/src/farm_gui/: package.xml  setup.cfg  setup.py
farm_ws/src/farm_gui/farm_gui/: camera_relay.py  main.py
farm_ws/src/farm_gui/launch/: gui.launch.py
farm_ws/src/farm_interfaces/: CMakeLists.txt  package.xml
farm_ws/src/farm_interfaces/action/: DoSample.action  Sample.action
farm_ws/src/farm_interfaces/msg/: MissionStatus.msg  RobotHealth.msg  SoilSample.msg  Telemetry.msg
farm_ws/src/farm_interfaces/srv/: SampleRequest.srv  SetGeofence.srv
farm_ws/src/farm_mission/: package.xml  setup.cfg  setup.py
farm_ws/src/farm_mission/launch/: mission.launch.py
farm_ws/src/farm_mission/src/: geofence_manager.py  mission_state_machine.py  soil_sampling_mission.py  waypoint_sampler.py
farm_ws/src/farm_navigation/: CMakeLists.txt  package.xml
farm_ws/src/farm_navigation/config/: costmap.yaml  nav2_params.yaml
farm_ws/src/farm_navigation/launch/: nav2.launch.py
farm_ws/src/farm_navigation/maps/: farm_map.yaml
farm_ws/src/farm_navigation/resource/: farm_navigation
farm_ws/src/farm_perception/: package.xml  setup.cfg  setup.py
farm_ws/src/farm_perception/config/: perception_params.yaml
farm_ws/src/farm_perception/launch/: perception.launch.py
farm_ws/src/farm_perception/src/: depth_verification.py  perception_node.py  soil_contact_detector.py
farm_ws/src/farm_robot/: .gitkeep
farm_ws/src/farm_sensors/: package.xml  setup.cfg  setup.py
farm_ws/src/farm_sensors/launch/: sensors.launch.py
farm_ws/src/farm_sensors/msg/: SoilSample.msg
farm_ws/src/farm_sensors/src/: moisture_driver.py  npk_driver.py  soil_data_publisher.py
farm_ws/src/farm_sim/: CMakeLists.txt  package.xml
farm_ws/src/farm_sim/config/: bt_tree.xml  costmap.yaml  gz_bridge.yaml
farm_ws/src/farm_sim/config/maps/: farm_map.pgm
farm_ws/src/farm_sim/launch/: camera_bridge.launch.py  farm_world.launch.py  gz_bridge.launch.py  gz_bridge_clock.launch.py  nav2.launch.py  spawn_robot.launch.py
farm_ws/src/farm_sim/models/big_tree/: model.config  model.sdf
farm_ws/src/farm_sim/scripts/: generate_farm_map.py
farm_ws/src/sfr_arm/: package.xml  setup.cfg  setup.py
farm_ws/src/sfr_arm/config/: arm_controller.yaml  arm_controllers.yaml  moveit_controllers.yaml  moveit_joint_limits.yaml
farm_ws/src/sfr_arm/launch/: moveit_config.launch.py
farm_ws/src/sfr_arm/sfr_arm/: __init__.py  arm_controller.py
farm_ws/src/sfr_bringup/: package.xml  setup.cfg  setup.py
farm_ws/src/sfr_bringup/launch/: full_sim.launch.py  full_sim_with_gui.launch.py  real_robot.launch.py  sim.launch.py  sim_with_gui.launch.py
farm_ws/src/sfr_description/: CMakeLists.txt  package.xml
farm_ws/src/sfr_description/urdf/: turtlebot3_om_robot.urdf.xacro  turtlebot_arm.urdf.xacro  ugvbeast_arm.urdf
farm_ws/src/sfr_description/urdf/turtlebot3_om/: open_manipulator_arm.urdf  ros2_control.xacro  turtlebot3_waffle_for_open_manipulator.urdf
farm_ws/src/sfr_gui/: package.xml  setup.cfg  setup.py
farm_ws/src/sfr_gui/launch/: gui.launch.py
farm_ws/src/sfr_gui/sfr_gui/: __init__.py  camera_relay.py  main.py
farm_ws/src/sfr_navigation/: package.xml  setup.cfg  setup.py
farm_ws/src/sfr_navigation/config/: nav2_params.yaml
farm_ws/src/sfr_navigation/config/maps/: farm_map.yaml
farm_ws/src/sfr_navigation/launch/: navigation.launch.py
farm_ws/src/sfr_navigation/sfr_navigation/: __init__.py  coverage_planner.py  waypoint_planner.py
farm_ws/src/sfr_simulation/: CMakeLists.txt  package.xml
farm_ws/src/sfr_simulation/config/: all_controllers.yaml  controller.yaml  diff_drive.yaml  gz_bridge_clock.yaml
farm_ws/src/sfr_simulation/launch/: farm_world.launch.py  gz_bridge.launch.py  gz_bridge_clock.launch.py  spawn_controllers.launch.py  spawn_robot.launch.py
farm_ws/src/sfr_simulation/worlds/: farm_world.world  farm_world_light.world
scripts/: build_sim.sh  launch_clean.sh  run_sim.sh  setup_env.sh  setup_gazebo_wsl.sh
