<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farm_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for farm rover simulation and GUI</description>
  <maintainer email="ujwalwag@todo.todo">ujwalwag</maintainer>
  <license>MIT</license>

  <exec_depend>farm_sim</exec_depend>
  <exec_depend>farm_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
