<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farm_navigation</name>
  <version>0.0.0</version>
  <description>NAV2 config, costmap, maps, and launch for soil fertility rover</description>
  <maintainer email="ujwalwag@todo.todo">ujwalwag</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_bringup</depend>
  <depend>ament_index_python</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
