<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farm_sensors</name>
  <version>0.0.0</version>
  <description>NPK, moisture drivers and soil data for soil fertility rover</description>
  <maintainer email="ujwalwag@todo.todo">ujwalwag</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>farm_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
