<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfr_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch: full simulation, real robot, and system integration</description>
  <maintainer email="ujwalwag@todo.todo">ujwalwag</maintainer>
  <license>MIT</license>

  <exec_depend>sfr_description</exec_depend>
  <exec_depend>sfr_simulation</exec_depend>
  <exec_depend>sfr_gui</exec_depend>
  <exec_depend>sfr_navigation</exec_depend>
  <exec_depend>sfr_arm</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
