<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfr_gui</name>
  <version>0.1.0</version>
  <description>PyQt GUI: autonomous and RC modes, sim launcher, ROS bridge to rover state</description>
  <maintainer email="ujwalwag@todo.todo">ujwalwag</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sfr_simulation</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
