<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sfr_simulation</name>
  <version>0.1.0</version>
  <description>Gazebo worlds, robot spawn, ros_gz bridges, and simulation controllers</description>
  <maintainer email="ujwalwag@todo.todo">ujwalwag</maintainer>
  <license>MIT</license>

  <depend>sfr_description</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>ros_gz_image</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
